complete header design

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>ECommerce</title>
+    <title>Renoxa-webibazzzar Static Working!!!!</title>
+
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://cdn.shopify.com/s/files/1/0531/1604/3454/t/2/assets/favicon.png?v=112966697231440099701611917679"
+    />
   </head>
   <body>
     <app-root></app-root>
